--- a/Grafos/Grafos.vcxproj.filters
+++ b/Grafos/Grafos.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="main.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="ArrayList.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
