--- a/Grafos/Grafos.vcxproj
+++ b/Grafos/Grafos.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Arista.h" />
     <ClInclude Include="ArrayList.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
