--- a/Grafos/Grafos.vcxproj.filters
+++ b/Grafos/Grafos.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="ArrayList.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Arista.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
