--- a/Grafos/Grafos.vcxproj.filters
+++ b/Grafos/Grafos.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="cargarObjetos.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Arista.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
